k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-codebase
  namespace: go-codebase
  labels:
    app: go-codebase
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: go-codebase
